--- a/styleKepregeny.css
+++ b/styleKepregeny.css
@@ -1,24 +1,34 @@
 html, body {
-    margin:0;
-    padding:0;
+    margin: 0;
+    padding: 0;
   }
   
 .kepregeny{
     margin: auto;
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: flex-start;
-    max-width: 900px;
+    justify-content: center;
+    align-items: stretch;
+    align-content: stretch;
+    max-width: 950px;
 }
 
 .kep{
     border: 1px solid black;
-    gap: 5px;
-    margin-top: 5px;
-    margin-bottom: 5px;
+    gap: 10px;
+    margin: 10px;
     width: 100%;
     max-width: 200px;
+    text-align: center;
+    font-family: "Bangers", system-ui;
+    font-weight: 400;
+    font-style: normal;
+}
+
+main{
+    display: flex;
+    flex-wrap: wrap;
 }
 
 article{
@@ -27,6 +37,27 @@ article{
 }
 
 aside{
-    display: flex;
     flex: 0 0 20%;
+    border: 1px solid black;
+    text-align: center;
+}
+
+nav{
+    flex: 0 0 100%;
+}
+
+
+header{
+    flex: 0 0 100%;
+}
+
+footer{
+    flex: 0 0 100%;
+    color: white;
+    background-color: black;
+    text-align: center;
+}
+
+.kep img{
+    max-width: 200px;
 }
