--- a/styleKepregeny.css
+++ b/styleKepregeny.css
@@ -1,6 +1,7 @@
 html, body {
     margin: 0;
     padding: 0;
+    font-family: Garamond, serif;
   }
   
 .kepregeny{
@@ -36,17 +37,32 @@ article{
     flex: 0 0 80%;
 }
 
-aside{
-    flex: 0 0 20%;
-    border: 1px solid black;
-    text-align: center;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-items: flex-start;
-    align-content: stretch;
-    max-width: 600px;
+.kep:nth-child(1){
+    background-color: rgb(165, 120, 209);
+}
+.kep:nth-child(2){
+    background-color: rgb(161, 211, 81);
+}
+.kep:nth-child(3){
+    background-color: rgb(71, 186, 194);
+}
+.kep:nth-child(4){
+    background-color: rgb(196, 78, 123);
+}
+.kep:nth-child(5){
+    background-color: rgb(93, 91, 218);
+    height: 270px;
+}
+.kep:nth-child(6){
+    background-color: rgb(230, 50, 44);
+    height: 280px;
+}
+.kep:nth-child(7){
+    background-color: rgb(60, 64, 87);
+}
+.kep:nth-child(8){
+    background-color: rgb(224, 152, 119);
+    height: 180px;
 }
 
 nav{
@@ -57,7 +73,6 @@ nav ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    overflow: hidden;
     background-color: #333;
     display: flex;
     justify-content: center;
@@ -69,6 +84,7 @@ nav li a {
     color: white;
     text-align: center; 
     text-decoration: none;
+    padding: 5px;
   }
   
 nav li a:hover {
@@ -97,9 +113,50 @@ footer{
 }
 
 .kep img{
+    width: 100%;
     max-width: 200px;
+    border: 1px solid black;
+}
+
+aside{
+    flex: 0 0 20%;
+    border: 1px solid black;
+    display: inline-flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: flex-start;
+    align-content: baseline;
+    max-width: 500px;
+    max-height: 650px;
+    text-align: center;
+    background-color: #ce9b9b;
+}
+
+aside .hirdetes{
+    margin: 10px;
 }
 
 .hirdetes img{
-    max-width: 70px;
+    max-width: 100px;
+    width: 100%;
+    gap: 0;
+}
+
+@media screen and (max-width: 1215px) {
+    aside{
+        max-width: max-content;
+        max-height: max-content;
+        flex: 0 0 100%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        flex-direction: column;
+    }
+    aside .hirdetes{
+        margin: 5px;
+    }
+    aside h1{
+        margin: 10px;
+        text-align: center;
+    }
 }
